--- a/Vinyles/asistencia/templates/paginas/adminVentasVinilos/bts.html
+++ b/Vinyles/asistencia/templates/paginas/adminVentasVinilos/bts.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/styleAdPro.css' %}">
+    <link rel="stylesheet" href="{% static 'css/administrador/styleAdPro.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
