--- a/Vinyles/asistencia/templates/paginas/administrador/bloq_users.html
+++ b/Vinyles/asistencia/templates/paginas/administrador/bloq_users.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/styleBloqUsers.css' %}">
+    <link rel="stylesheet" href="{% static 'css/administrador/style_bloq_users.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 {% endblock extra_css %}
 
