--- a/Vinyles/asistencia/templates/paginas/administrador/producto.html
+++ b/Vinyles/asistencia/templates/paginas/administrador/producto.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/styleAdminProducto.css' %}">
+    <link rel="stylesheet" href="{% static 'css/administrador/style_producto.css' %}">
 {% endblock extra_css %}
 
 {% block titulo %} Vinyles - Productos {% endblock titulo %}
