--- a/Vinyles/asistencia/templates/paginas/administrador/ventas.html
+++ b/Vinyles/asistencia/templates/paginas/administrador/ventas.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/styleVentas.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Administrador/style_ventas.css' %}">
 {% endblock extra_css %}
 
 {% block titulo %} Vinyles - Ventas {% endblock titulo %}
