Hice la pagina de mas vendidos :D es bien basica xd

--- a/Vinyles/asistencia/templates/paginas/administrador.html
+++ b/Vinyles/asistencia/templates/paginas/administrador.html
@@ -35,6 +35,12 @@
         <div class="desc">Soporte necesita respuesta</div>
     </a>
 
+<a href="{% url 'masVendidos'%}" class="nota piel">
+        <h3> 💹 Más vendidos</h3>
+        <div class="value">5</div>
+        <div class="desc">productos más vendidos</div>
+    </a>
+
 </section>
 
 
