--- a/Vinyles/static/css/styleAdministrador.css
+++ b/Vinyles/static/css/styleAdministrador.css
@@ -73,3 +73,4 @@
 .azul   { background-color: #e1f5fd; }
 .lila   { background-color: #f6ddfd; }
 .piel   { background-color: #fcffd8; }
+.verde  { background-color: #f6ddfd; }
